<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Web-Test-Automation</groupId>
	<artifactId>Web-Test-Automation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<dependencies>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.8</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.19</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/default.xml</suiteXmlFile>
					</suiteXmlFiles>
					<parallel>methods</parallel>
					<!-- <threadCount>5</threadCount> -->
					<!-- <forkCount>5</forkCount> -->
					<!-- <reuseForks>true</reuseForks> -->
					<!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
					<!-- <properties> -->
					<!-- <property> -->
					<!-- <name>surefire.testng.verbose</name> -->
					<!-- <value>10</value> -->
					<!-- </property> -->
					<!-- </properties> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>